--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -40,7 +40,7 @@ block content
           .card.card-primary
             .card-block
               h2.card-title Location map
-              img.img-fluid.rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2')
+              img.img-fluid.rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2&key=AIzaSyBb_LMPCeRLk4PyxArgAdyK7QQonzI-fhw')
       .row
         .col-12
           .card.card-primary.review-card
